<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test 1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Entrez du texte svp</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="message_sent">Message envoyé</string>
    <string name="button_return">Retour</string>
    <string name="button_goTo_IMC">Calcul IMC</string>
    <string name="title_activity_calcul_imc">CalculIMC</string>
    <string name="metres">Mètres</string>
    <string name="centimetres">Centimètres</string>
    <string name="poids">Entrez un poids</string>
    <string name="taille">Entrez une taille</string>
    <string name="calcul_IMC">Calcul de l\'IMC</string>
    <string name="IMC_result">Resultat</string>
    <string name="IMC_return">Retour</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="button_goTo_preferences">Préférences</string>
    <string name="preferences_return">Retour</string>
    <string name="preferences_add">Ajouter</string>
    <string name="title_activity_ajout__pref">Ajout_Pref</string>
    <string name="preferences_add_nom">Nom de la nouvelle couleur</string>
    <string name="preferences_add_value">Valeur de la nouvelle couleur</string>
    <string name="preferences_add_ajout">Ajouter</string>
    <string name="title_activity_test">Test</string>
    <string name="preferences_reset">Reset</string>
    <string name="diese">#</string>
    <string name="preferences_background">"#75A49D"</string>

</resources>