<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/IMC_id"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculIMC" >

    <EditText
        android:id="@+id/poids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/poids"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/taille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/poids"
        android:layout_below="@+id/poids"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/taille"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radiogroup_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taille"
        android:layout_below="@+id/taille"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/centimetres"
            android:text="@string/centimetres" />

        <RadioButton
            android:id="@+id/metres"
            android:text="@string/metres" />
    </RadioGroup>

    <Button
        android:id="@+id/IMC_button_calcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup_unit"
        android:layout_centerHorizontal="true"
        android:onClick="calcul"
        android:text="@string/calcul_IMC" />

    <Button
        android:id="@+id/IMC_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="return_main"
        android:text="@string/IMC_return" />

    <TextView
        android:id="@+id/IMC_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/IMC_result" />

</RelativeLayout>