<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ajout_id"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Ajout_Pref" >

    <Button
        android:id="@+id/preferences_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="return_main"
        android:text="@string/preferences_return" />

    <EditText
        android:id="@+id/preferences_add_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/preferences_add_nom" />

    <EditText
        android:id="@+id/preferences_add_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preferences_add_nom"
        android:layout_below="@+id/preferences_add_nom"
        android:inputType="text"
        android:text="@string/diese" />

    <Button
        android:id="@+id/preferences_add_ajout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preferences_add_value"
        android:layout_centerHorizontal="true"
        android:onClick="preferences_add_ajout"
        android:text="@string/preferences_add_ajout" />

</RelativeLayout>