<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_id"
   
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_goTo_IMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:onClick="goTo_IMC"
        android:text="@string/button_goTo_IMC" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_goTo_IMC"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:hint="@string/edit_message" >
    </EditText>

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_message"
        android:layout_toRightOf="@+id/edit_message"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/button_goTo_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:onClick="goTo_preferences"
        android:text="@string/button_goTo_preferences" />

</RelativeLayout>