<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferences_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Preferences" >

    <Button
        android:id="@+id/preferences_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="return_main"
        android:text="@string/preferences_return" />

    <ListView
        android:id="@+id/preferences_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/preferences_return"
        android:layout_toLeftOf="@+id/preferences_return" />

    <Button
        android:id="@+id/preferences_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/preferences_list"
        android:onClick="preferences_add"
        android:text="@string/preferences_add" />

    <Button
        android:id="@+id/preferences_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preferences_add"
        android:layout_toRightOf="@+id/preferences_list"
        android:onClick="preferences_reset"
        android:text="@string/preferences_reset" />

</RelativeLayout>